[package]
publish = false
name = "surrealql-lsp-server"
version = "0.0.0"
edition = "2021"
description = "LSP server for SurrealQL"

[dependencies]
lsp-textdocument = "0.3.2"
once_cell = "1.19.0"
serde = "1.0.197"
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
tower-lsp = "0.20.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tree-sitter = "0.20.10"
tree-sitter-surrealql = { git = "https://github.com/Ce11an/tree-sitter-surrealql.git", branch = "main" }
